# ehh2021-challange-7

./: Dockerfile  README.md  docker-compose.yml  model_demo.ipynb  pyproject.toml  requirements.txt  zCaseDeployNotes.md
evaluation/: model_demo.ipynb
factorio/: config.ini
factorio/core/: load_and_train.py  run_load_model.py  run_training_model.py
factorio/fhir/: fhirpy_test.py  minimal_test.py
factorio/gpmodels/: gplognorm.py  gplognormpl.py  gppyrolik.py
factorio/learnedmodels/: model_state_20220426.pth  scaler.pkl
factorio/mobility/: mobility_apple.py  mobility_google.py  mobility_tomtom.py  mobility_waze.py
factorio/streamlit/: main.py
factorio/utils/: __init__.py  anonymizer.py  data_loader.py  hack_config.py  helpers.py  log.py
factorio/weather/: historical_weather.py
